[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/LEMONMILK.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Themes/Buttons.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/UI/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=4]
size = 72
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
color = Color( 0.419608, 0.419608, 0.419608, 0.247059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnpauseBG" type="Button" parent="Screen"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePanel" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.5
margin_top = -237.5
margin_right = 212.5
margin_bottom = 237.5
rect_min_size = Vector2( 425, 475 )
color = Color( 0, 0, 0, 0.792157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PausePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel/CenterContainer"]
margin_left = 65.0
margin_top = 52.0
margin_right = 359.0
margin_bottom = 423.0
theme = ExtResource( 2 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="PausePanel/CenterContainer/VBoxContainer"]
margin_right = 294.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 4 )
text = "Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="PausePanel/CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 294.0
margin_bottom = 131.0
rect_min_size = Vector2( 0, 25 )

[node name="Resume" type="Button" parent="PausePanel/CenterContainer/VBoxContainer"]
use_parent_material = true
margin_top = 141.0
margin_right = 294.0
margin_bottom = 191.0
rect_min_size = Vector2( 0, 50 )
text = "Resume Game"

[node name="Restart" type="Button" parent="PausePanel/CenterContainer/VBoxContainer"]
use_parent_material = true
margin_top = 201.0
margin_right = 294.0
margin_bottom = 251.0
rect_min_size = Vector2( 0, 50 )
text = "Restart"

[node name="MainMenu" type="Button" parent="PausePanel/CenterContainer/VBoxContainer"]
use_parent_material = true
margin_top = 261.0
margin_right = 294.0
margin_bottom = 311.0
rect_min_size = Vector2( 0, 50 )
text = "Go to Main Menu"

[node name="Quit" type="Button" parent="PausePanel/CenterContainer/VBoxContainer"]
use_parent_material = true
margin_top = 321.0
margin_right = 294.0
margin_bottom = 371.0
rect_min_size = Vector2( 0, 50 )
text = "Quit"

[connection signal="pressed" from="Screen/UnpauseBG" to="." method="_on_UnpauseBG_pressed"]
[connection signal="pressed" from="PausePanel/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PausePanel/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="PausePanel/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="PausePanel/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
